--- a/app/webroot/css/testSmn.css
+++ b/app/webroot/css/testSmn.css
@@ -6,3 +6,18 @@
 	height: 100px;
 	overflow: hidden;
 }
+
+#myImgs .delBtn {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	z-index: 1000;
+	border-radius: 10px;
+	background: rgba(0,0,0,0.7);
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+}
