--- a/app/webroot/css/login.css
+++ b/app/webroot/css/login.css
@@ -15,6 +15,7 @@
 ----------------------------------------------------------------------*/
 html,body {
 	min-width: 390px;
+	min-height: 480px;
 	width: 100%;
 	height: 100%;
 	background: #fff;
