--- a/app/webroot/css/login.css
+++ b/app/webroot/css/login.css
@@ -107,7 +107,7 @@ fieldset{
 
 
 .mailTextbox{
-	margin: 0px 0 20px 0;
+	margin: 0 0 20px 0;
 	padding: 0 10px;
 	width: 284px;
 	height: 30px;
@@ -117,7 +117,7 @@ fieldset{
 
 
 .passTextbox{
-	margin: 0px 0 24px 0;
+	margin: 0 0 24px 0;
 	padding: 0 10px;
 	width: 284px;
 	height: 30px;
