ログイン errMsg スタイル変更

--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -114,11 +114,16 @@ header{
 }
 
 
-#hNav ul li img{
+.hNavst1 img{
 	width: 138px;
 	height:54px;
 }
 
+
+.hNavst2 img{
+	width: 54px;
+	height: 54px;
+}
 
 
 
