--- a/app/webroot/css/login.css
+++ b/app/webroot/css/login.css
@@ -117,7 +117,7 @@ fieldset{
 
 
 .passTextbox{
-	margin: 0 0 24px 0;
+	margin: 0 0 6px 0;
 	padding: 0 10px;
 	width: 284px;
 	height: 30px;
@@ -181,6 +181,10 @@ img.ar{
 }
 
 
-
+.errMsg{
+	height: 12px;
+	margin-bottom: 6px;
+	color: #fd4001;
+}
 
 
