--- a/partsset/css/control1.css
+++ b/partsset/css/control1.css
@@ -23,3 +23,88 @@
 	outline: 0;
 	box-shadow: 0px 0px 0pt 0pt aqua;
 }
+.select {
+	display: inline-block;
+	position: relative;
+	z-index: 0;
+	border: 1px solid #45acbb;
+	color: #45acbb;
+	padding: 5px;
+	overflow: hidden;
+	font-size: 14px;
+	width: 222px;
+}
+.select-select {
+	position: relative;
+	z-index: 2;
+	width: 100%;
+	height: 28px;
+	margin: 0;
+	padding: 3px 20px 3px 3px;
+	font: inherit;
+	opacity: 0;
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+.select-select:focus {
+	filter: none;
+}
+.select-value {
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1;
+	overflow: hidden;
+	width: auto;
+	height: auto;
+	padding: 2px 20px 0 9px;
+	line-height: 28px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	background-position: right 10px center;
+	background-image: url('../img/selectctlar1.png');
+	background-repeat: no-repeat;
+	background-size: 7px, 16px;
+}
+textarea {
+	border: 1px solid #45acbb;
+	width: 368px;
+	font-size: 16px;
+	padding: 10px;
+}
+textarea:focus {
+	outline: 0;
+}
+/*.customSelect {
+	overflow: hidden;
+	height: 30px;
+	width: 222px;
+	padding: 0;
+	display: block;
+	margin: 0;
+	position: relative;
+}
+.customSelect:hover {
+	cursor: pointer;
+	background: #333;
+	color: #fff;
+}
+.customSelect li {
+	display: block;
+	height: 30px;
+	width: 222px;
+	margin: 0;
+	font-size: 14px;
+	position: absolute;
+}
+.customSelect p {
+	display: block;
+	height: 30px;
+	width: 212px;
+	margin: 0;
+	padding: 5px 5px;
+	font-size: 14px;
+}*/
