--- a/partsset/css/control1.css
+++ b/partsset/css/control1.css
@@ -17,57 +17,12 @@
 	width: 284px;
 	height: 30px;
 	font-family: 'Lucida grande','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
+	color: #45acbb;
 }
 .text:focus,
 .email:focus {
 	outline: 0;
 	box-shadow: 0px 0px 0pt 0pt aqua;
-}
-.select {
-	display: inline-block;
-	position: relative;
-	z-index: 0;
-	border: 1px solid #45acbb;
-	color: #45acbb;
-	padding: 5px;
-	overflow: hidden;
-	font-size: 14px;
-	width: 222px;
-}
-.select-select {
-	position: relative;
-	z-index: 2;
-	width: 100%;
-	height: 28px;
-	margin: 0;
-	padding: 3px 20px 3px 3px;
-	font: inherit;
-	opacity: 0;
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-}
-.select-select:focus {
-	filter: none;
-}
-.select-value {
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 1;
-	overflow: hidden;
-	width: auto;
-	height: auto;
-	padding: 2px 20px 0 9px;
-	line-height: 28px;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	background-position: right 10px center;
-	background-image: url('../img/selectctlar1.png');
-	background-repeat: no-repeat;
-	background-size: 7px, 16px;
 }
 textarea {
 	border: 1px solid #45acbb;
@@ -78,33 +33,73 @@ textarea {
 textarea:focus {
 	outline: 0;
 }
-/*.customSelect {
-	overflow: hidden;
-	height: 30px;
-	width: 222px;
-	padding: 0;
-	display: block;
-	margin: 0;
-	position: relative;
+.easy-select-box{
+	display:inline-block;
+	position:relative;
+	border: #45acbb solid 1px;
 }
-.customSelect:hover {
+.easy-select-box:focus {
+	outline: none;
+}
+.easy-select-box .esb-dropdown{
+	position:absolute;
+	top:100%;
+	left:0;
+	z-index:99;
+	display:none;
+}
+.easy-select-box{
+	width:222px;
+	text-align:left;
+	font-size:14px;
+	color:#0c2245;
+}
+.easy-select-box .esb-displayer{
+	background: url('../img/selectctlar1.png') no-repeat right 10px center;
+	background-size: 7px 16px;
+	color:#45acbb;
+	padding:5px;
+	height:18px;
+	line-height:18px;
+	cursor: default;
+}
+.easy-select-box:hover .esb-displayer{
+	text-decoration:none;
 	cursor: pointer;
-	background: #333;
-	color: #fff;
 }
-.customSelect li {
-	display: block;
-	height: 30px;
-	width: 222px;
-	margin: 0;
-	font-size: 14px;
-	position: absolute;
+.easy-select-box.disabled .esb-displayer,
+.easy-select-box:hover.disabled .esb-displayer{
+	background-position: 0 -36px;
 }
-.customSelect p {
-	display: block;
-	height: 30px;
-	width: 212px;
-	margin: 0;
-	padding: 5px 5px;
-	font-size: 14px;
-}*/
+.easy-select-box .esb-dropdown{
+	border:1px solid #cccccc;
+	width:116px;
+	max-height:200px;
+	overflow:auto;
+	background:#FFFFFF;
+}
+.easy-select-box .esb-dropdown .esb-item{
+	padding:5px;
+	background:#ffffff;
+	color:#45acbb;
+	cursor:default;
+}
+.easy-select-box .esb-dropdown .esb-item:hover{
+	background:#45acbb;
+	color:#fff;
+	text-decoration:none;
+	cursor: pointer;
+}
+.select-box {
+  background: #FFFDF4;
+  border: 2px solid #D2BA85;
+  border-radius: 5px;
+  color: #0C2245;
+  font-size: 14px;
+  height: 30px;
+  line-height: 30px;
+  text-align: left;
+  text-indent: 5px;
+  vertical-align: middle;
+  width: 140px;
+}
