--- a/app/webroot/css/seminar_card.css
+++ b/app/webroot/css/seminar_card.css
@@ -9,9 +9,130 @@
 
 
 
-/* Universal
+/* Seminar Card
 ----------------------------------------------------------------------*/
-
+dl,dt,dd,ul,li,h3,h4,p {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+img {
+	line-height: 1;
+	vertical-align: bottom;
+}
+li {
+	list-style: none;
+}
+.card {
+	width: 290px;
+	padding: 8px;
+	background: #fff;
+}
+.card .top {
+	padding: 30px;
+	width: 230px
+}
+.card.middle {
+	text-align: center;
+}
+.card .bottom {
+	padding: 30px 14px 16px;
+}
+.early .top, .early .bottom {
+	background: #fd865b;
+	color: #fff;
+}
+.mid .top, .mid .bottom {
+	background: #f5d23f;
+	color: #fff;
+}
+.late .top, .late .bottom {
+	background: #20ccaa;
+	color: #fff;
+}
+.card .middle h3 {
+	padding: 18px 26px;
+	color: #613323;
+	text-align: center;
+}
+.card dt, .card dd {
+	font-size: 12px;
+}
+.card dd {
+	padding-bottom: 0.6em;
+}
+.card dd.hostname {
+	font-size: 18px;
+}
+.card li {
+	float: left;
+}
+.card .thumb {
+	width: 90px;
+	height: 90px;
+	background: #333;
+}
+.card .top ul {
+	min-height: 90px;
+}
+.card .top li {
+	margin-left: 16px;
+}
+.card .top li:first-child {
+	margin-left: 0;
+}
+.card .bottom ul {
+	padding-bottom: 20px;
+	width: 290px;
+	height: 74px;
+	display: block;
+}
+.card .bottom li {
+	display: block;
+	width: 74px;
+	height: 74px;
+	border-radius: 100%;
+	background: #fff;
+	text-align: center;
+	margin-left: 20px;
+}
+.card .bottom li:first-child {
+	margin-left: 0;
+}
+.card h4 {
+	font-size: 12px;
+	font-weight: normal;
+	padding-top: 15px;
+}
+.card p {
+	font-size: 24px;
+	font-weight: normal;
+}
+.seminarsArea .early p {
+	color: #fd865b;
+}
+.seminarsArea .mid p {
+	color: #f5d23f;
+}
+.seminarsArea .late p {
+	color: #20ccaa;
+}
+.early h4 {
+	color: #fd865b;
+}
+.mid h4 {
+	color: #f5d23f;
+}
+.late h4 {
+	color: #20ccaa;
+}
+.card .limitDate {
+	font-size: 14px;
+	padding-top: 5px;
+}
+.card .btnArea {
+	text-align: center;
+}
 
 
 
