--- a/app/webroot/css/teach_mes.css
+++ b/app/webroot/css/teach_mes.css
@@ -11,7 +11,58 @@
 
 /* Universal
 ----------------------------------------------------------------------*/
-
+h2, h3, p, ul, li {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+#container {
+	color: #656565;
+	font-size: 14px;
+}
+.hidden {
+	display: none;
+}
+#container > section {
+	padding: 80px 0;
+	width: 642px;
+	margin: 0 auto;
+}
+#container > section > section {
+	background: #fff;
+	padding: 30px;
+}
+h2 {
+	text-align: center;
+	padding-bottom: 60px;
+}
+h3 {
+	margin-bottom: 30px;
+	font-size: 30px;
+}
+.metooNum {
+	color: #4cbdce;
+	font-weight: bold;
+	margin-top: 30px;
+	text-align: right;
+}
+.btnArea {
+	width: 642px;
+	margin-top: 30px;
+}
+.btnArea a {
+	display: block;
+	width: 222px;
+	height: 59px;
+	float: left;
+	margin-left: 30px;
+}
+.btnArea a:first-child {
+	display: block;
+	width: 306px;
+	height: 59px;
+	margin-left: 0;
+}
 
 
 
