--- a/app/webroot/css/top.css
+++ b/app/webroot/css/top.css
@@ -46,12 +46,20 @@ h2 {
 	margin-left: 30px;
 	float: left;
 	background: #fff;
-	padding: 15px 0 12px;
+	padding: 14px 0;
 	margin-bottom: 20px;
 }
 #needsArea a {
 	color: #656565;
 	text-decoration: none;
+}
+#needsArea .right a {
+	display: block;
+	widh: 140px;
+	height: 32px;
+}
+#needsArea a img {
+	vertical-align: bottom;
 }
 #needsArea a:hover {
 	text-decoration: underline;
@@ -67,7 +75,7 @@ h2 {
 }
 .needsWrapper .left {
 	width: 233px;
-	padding: 2px 0 0 20px;
+	padding: 4px 0 0 20px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -75,10 +83,11 @@ h2 {
 .needsWrapper .middle {
 	width: 63px;
 	text-align: right;
-	padding: 2px 10px 0 0;
+	padding: 4px 10px 0 0;
 	color: #48b2c2;
 }
 .needsWrapper .right {
+	padding-top: 2px;
 	width: 140px;
 }
 .seminarsArea {
