--- a/app/webroot/css/seminars.css
+++ b/app/webroot/css/seminars.css
@@ -11,7 +11,36 @@
 
 /* Universal
 ----------------------------------------------------------------------*/
-
+h2,p,ul,li,dt,dd {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+.hidden {
+	display: none;
+}
+h2 {
+	text-align: center;
+	padding: 80px 0 60px;
+}
+section {
+	background: #fff;
+	padding: 60px 0;
+}
+section .wrapper {
+	width: 642px;
+	margin: 0 auto;
+}
+dt {
+	color: #3e99a7;
+	font-size: 18px;
+	font-weight: bold;
+	padding-bottom: 10px;
+}
+.btnArea {
+	text-align: center;
+	padding: 60px 0;
+}
 
 
 
