--- a/app/webroot/css/control2.css
+++ b/app/webroot/css/control2.css
@@ -26,7 +26,9 @@
 	font-size: 14px;
 }
 .date {
-	background-image: url('../');
+	background-image: url('../img/calender.png') !important;
+	background-size: 28px 28px;
+	background-position: right 10px center;
 }
 .text:focus,
 .email:focus {
