--- a/app/webroot/css/seminars.css
+++ b/app/webroot/css/seminars.css
@@ -11,7 +11,7 @@
 
 /* Universal
 ----------------------------------------------------------------------*/
-h2,p,ul,li,dt,dd {
+h2,h3,h4,p,ul,li,dt,dd {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -63,6 +63,115 @@ section .wrapper dl dd .btnArea > a:first-child {
 	max-width: 400px;
 	max-height: 400px;
 }
+
+
+
+/* New Seminar Confirm
+----------------------------------------------------------------------*/
+#newSmnConfirm {
+	color: #656565;
+	font-size: 16px;
+}
+#newSmnConfirm .wrapper {
+	width: 978px;
+}
+#newSmnConfirm h3 {
+	font-size: 36px;
+	border-bottom: 1px solid #4cbdce;
+	padding: 40px 0;
+}
+#newSmnConfirm h4 {
+	padding: 20px 0;
+}
+#newSmnConfirm #coverArea {
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+}
+#newSmnConfirm #coverArea img {
+	width: 100%;
+}
+#newSmnConfirm .cf {
+	width: 978px;
+}
+#newSmnConfirm article {
+	width: 642px;
+	float: left;
+}
+#newSmnConfirm article img {
+	display: block;
+	max-width: 474px;
+	max-height: 400px;
+	margin: 40px auto;
+}
+#newSmnConfirm aside {
+	float: left;
+	margin-left: 30px;
+}
+#newSmnConfirm aside > div {
+	width: 222px;
+	padding: 40px;
+	border: 2px solid #4cbdce;
+}
+}
+#newSmnConfirmbtnArea {
+	text-align: center;
+}
+#newSmnConfirmbtnArea a {
+	display: block;
+	width: 222px;
+	height: 54px;
+	float: left;
+	margin-left: 30px;
+}
+#newSmnConfirmbtnArea {
+	width: 474px;
+	margin: 0 auto;
+}
+#newSmnConfirmbtnArea a:first-child {
+	display: block;
+	width: 222px;
+	height: 54px;
+	float: left;
+	margin-left: 0;
+}
+#newSmnConfirm h4 {
+	font-size: 18px;
+}
+#newSmnConfirm dl {
+	margin: 0;
+}
+#newSmnConfirm dt {
+	padding-bottom: 10px;
+	font-size: 18px;
+	color: #656565;
+	line-height: 1;
+}
+#newSmnConfirm dd {
+	padding-bottom: 20px;
+	font-size: 22px;
+	color: #4cbdce;
+}
+#newSmnConfirm .profImg {
+	width: 140px;
+	height: 140px;
+	overflow: hidden;
+}
+#newSmnConfirm dd p {
+	padding-bottom: 10px;
+}
+
+
+
+/* New Seminar Register
+----------------------------------------------------------------------*/
+#newSmnRegister p {
+	color: #ffb425;
+	font-size: 32px;
+	font-weight: bold;
+	text-align: center;
+}
+
 
 
 
