新規勉強会登録完了ページ ボタン余白修正

--- a/app/webroot/css/control2.css
+++ b/app/webroot/css/control2.css
@@ -185,6 +185,7 @@
 }
 .richeditor li.labelLi {
 	border: solid 1px #3e99a7;
+	padding-top: 3px;
 }
 .richeditor li.buiBtn,
 .richeditor li.insertImg {
