--- a/app/webroot/css/mb_login.css
+++ b/app/webroot/css/mb_login.css
@@ -15,7 +15,6 @@
 html,body {
    width: 100%;
    height: 100%;
-   min-height: 480px;
    font-family: Helvetica,'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
    font-size: 12px;
    line-height: 1.4;
@@ -70,14 +69,15 @@ img {
 /* Content
 ----------------------------------------------------------------------*/
 #content {
-   margin-top: 95px;
+   position: absolute;
+   top: 21%;
 }
 
 
 .logo {
    width: 190px;
    height: 52px;
-   margin: 0 auto;
+   margin-left: -10px;
 }
 
 
@@ -115,6 +115,12 @@ img {
 }
 
 
+.errMsg {
+   margin-top: 20px;
+   color: #fd4001;
+}
+
+
 .loginBtn {
    display: block;
    width: 90.3125%;
@@ -122,10 +128,12 @@ img {
    min-height: 44px;
    margin: 20px auto 40px auto;
    border: none;
-   background-image: url(../img/mb_img/login_btn.png);
+   background: url(../img/mb_img/login_btn.png) no-repeat;
+   background-color: #ffb425;
+   background-position: center center;
    -webkit-background-size: 100%;
         -o-background-size: 100%;
-           background-size: 100%;
+           background-size: auto 100%;
 }
 
 
