mb トップタブ修正

--- a/app/webroot/css/mb_top.css
+++ b/app/webroot/css/mb_top.css
@@ -32,6 +32,8 @@ ul,li,h2,h3,p {
 .panel {
     display: none;
 }
+
+
 .show {
     display: block;
 }
@@ -48,16 +50,44 @@ ul.topTab li {
     float: left;
     width: 50%;
     height: 44px;
-    font-size: 14px;
-    font-weight: bold;
     line-height: 40px;
-    letter-spacing: 0;
     background: #fff;
 }
 
 
 ul.topTab li.active {
     color: #eba621;
+}
+
+
+.topTab li h2 {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+}
+
+
+.tabArArea {
+    width: 50%;
+    margin-bottom: 10px;
+    padding: 0;
+    text-align: center;
+    line-height: 0;
+}
+
+
+.tabL {
+    padding-right: 50%;
+}
+
+
+.tabR {
+    padding-left: 50%;
+}
+
+
+.tabArArea img {
+    width: 18.75%;
 }
 
 
@@ -71,23 +101,21 @@ ul.topTab li.active {
     font-size: 20px;
     color: #656565;
 }
-#container h2 {
-    font-size: 24px;
-}
+
+
 #container section {
-    padding: 40px 0 0;
+    padding: 0 0 0;
 }
-h2 {
-    margin-bottom: 60px;
-    text-align: center;
-}
+
+
 .hidden {
     display: none;
 }
+
+
 #needsArea {
     overflow: hidden;
 }
-
 
 
 #needsArea li {
@@ -97,23 +125,34 @@ h2 {
     padding: 14px 0;
     background: #fff;
 }
+
+
 #needsArea a {
     text-decoration: none;
     color: #656565;
 }
 
+
 #needsArea a:hover {
     text-decoration: underline;
 }
+
+
 #needsArea span {
     padding-left: 0;
 }
+
+
 .needsWrapper {
     width: 400px;
 }
+
+
 .needsWrapper > div {
     float: left;
 }
+
+
 .needsWrapper .left {
     overflow: hidden;
     width: 233px;
@@ -121,25 +160,37 @@ h2 {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+
+
 .needsWrapper .middle {
     padding: 5px 20px 0 0;
     text-align: right;
     color: #48b2c2;
 }
+
+
 .needsWrapper .right {
     width: 140px;
     padding-top: 2px;
 }
+
+
 section .wrapper {
     overflow: hidden;
     margin: 0 auto;
 }
+
+
 .seminarsArea {
     padding-bottom: 80px;
 }
+
+
 .card {
     margin: 0 auto 30px auto;
 }
+
+
 .thumb {
     overflow: hidden;
 }
