--- a/app/webroot/css/teach_mes.css
+++ b/app/webroot/css/teach_mes.css
@@ -1,4 +1,5 @@
-@charset "UTF-8";
+@charset 'UTF-8';
+
 
 
 /*---------------------------------
@@ -9,65 +10,78 @@
 
 
 
+
 /* Universal
 ----------------------------------------------------------------------*/
 h2, h3, p, ul, li {
-	margin: 0;
-	padding: 0;
-	border: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
+
+
 #container {
-	color: #656565;
-	font-size: 14px;
+    font-size: 14px;
+    color: #656565;
 }
+
+
 .hidden {
-	display: none;
+    display: none;
 }
+
+
 #container > section {
-	padding: 80px 0;
-	width: 642px;
-	margin: 0 auto;
+    width: 642px;
+    margin: 0 auto;
+    padding: 80px 0;
 }
+
+
 #container > section > section {
-	background: #fff;
-	padding: 30px;
+    padding: 30px;
+    background: #fff;
 }
+
+
 h2 {
-	text-align: center;
-	padding-bottom: 60px;
+    padding-bottom: 60px;
+    text-align: center;
 }
+
+
 h3 {
-	margin-bottom: 30px;
-	font-size: 30px;
+    margin-bottom: 30px;
+    font-size: 30px;
 }
+
+
 .metooNum {
-	color: #4cbdce;
-	font-weight: bold;
-	margin-top: 30px;
-	text-align: right;
+    margin-top: 30px;
+    font-weight: bold;
+    text-align: right;
+    color: #4cbdce;
 }
+
+
 .btnArea {
-	width: 642px;
-	margin-top: 30px;
+    width: 642px;
+    margin-top: 30px;
 }
+
+
 .btnArea a {
-	display: block;
-	width: 222px;
-	height: 59px;
-	float: left;
-	margin-left: 30px;
+    display: block;
+    float: left;
+    width: 222px;
+    height: 59px;
+    margin-left: 30px;
 }
+
+
 .btnArea a:first-child {
-	display: block;
-	width: 306px;
-	height: 59px;
-	margin-left: 0;
+    display: block;
+    width: 306px;
+    height: 59px;
+    margin-left: 0;
 }
-
-
-
-
-
-
-
-
