TeachMes 作成フォーム入力できないバグ修正

--- a/app/webroot/css/mb_teach_mes.css
+++ b/app/webroot/css/mb_teach_mes.css
@@ -137,6 +137,13 @@ hr {
 }
 
 
+.btnArea2 {
+    width: 93.4375%;
+    margin-top: 10px;
+    margin-left: 3.28125%;
+}
+
+
 .needsHalfBtn {
     float: left;
     width: 48.3277592%;
