--- a/app/webroot/css/teach_mes.css
+++ b/app/webroot/css/teach_mes.css
@@ -26,6 +26,193 @@ h2, h3, p, ul, li {
 }
 
 
+
+body{
+    width: 100%;
+}
+
+
+.plot {
+   width     : 978px;
+   margin    : 0 auto;
+}
+
+
+
+.header_img{
+    margin-top: 80px;
+    text-align: center;
+}
+
+
+.teach_mes_contents{
+    margin-top: 60px;
+    margin-left: 168px;
+    width: 642px;
+}
+
+
+
+/*  NewTeachmeIndex
+----------------------------------------------------------------------*/
+
+
+.index_title{
+    height: calc(60px - 20px);
+    width: calc(474px - 20px);
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    border: 1px solid #3e99a7;
+    font-size: 18px;
+    padding: 10px;
+}
+
+
+.index_textarea{
+    margin-top: 20px;
+    width: calc(642px - 20px);
+    height: calc(250px - 20px);
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    border: 1px solid #3e99a7;
+    font-size: 18px;
+    padding: 10px;
+}
+
+.index_err{
+    color: red;
+}
+
+.index_submit_img{
+    margin-top: 20px;
+}
+
+
+
+
+
+
+
+/*  NewTeachmeConfirm
+----------------------------------------------------------------------*/
+
+.confirm_contents{
+    background-color: #FFF;
+    min-height: calc(200px - 60px);
+    width: calc(642px - 60px);
+    padding: 30px;
+}
+
+
+.confirm_contents h2{
+    font-weight: normal;
+    font-size: 34px;
+}
+.confirm_contents p{
+    margin-top: 30px;
+    font-size: 14px;
+}
+
+.confirm_links{
+    margin-top: 30px;
+}
+
+
+.confirm_cancel_img{
+    margin-right: 30px;
+}
+
+
+
+
+/*  NewTeachmeConplete
+----------------------------------------------------------------------*/
+
+.complete_contents{
+    background-color: #FFF;
+    text-align: center;
+    height: calc(200px - 80px);
+    margin-top: 60px;
+    padding-top: 80px;
+}
+
+.complete_contents h2{
+    color: #f6a429;
+    margin: 0;
+    font-size: 32px;
+}
+
+
+
+.complete_links{
+    margin-top: 30px;
+    margin-left: 252px;
+    width: clac(978px - 252px);
+}
+
+
+
+
+
+/*  TeachmeDetails
+----------------------------------------------------------------------*/
+
+
+.detail_contents_top{
+    background-color: #FFF;
+    min-height: calc(180px - 60px);
+    margin-top: 60px;
+    margin-left: 168px;
+    width: calc(642px - 60px);
+    padding: 30px;
+}
+
+.detail_contents_top h3{
+    font-weight: normal;
+    font-size: 34px;
+}
+.detail_contents_top p{
+    margin-top: 30px;
+    font-size: 14px;
+}
+.detail_contents_bottom{
+    background-color: #f8f8f8;
+    height: calc(45px - 20px);
+    border-top: 1px solid #c8b9be;
+    margin-left: 168px;
+    width: calc(642px - 60px);
+    padding: 10px 30px;
+}
+.metoo_num{
+    float: left;
+    color: #a5969b;
+    width: 222px;
+}
+.metoo_num p{
+    font-size: 16px;
+}
+.metoo_num p span{
+    font-size: 20px;
+}
+.metoo_btn{
+    float: right;
+    width: 143.5px;
+    margin-top: 5px;
+}
+
+
+.detail_links{
+    margin-top: 30px;
+    margin-left: 168px;
+    width: 642px;
+}
+
+.detail_links a:first-child{
+    margin-right: 30px;
+} 
+
+
+
 .hidden {
     display: none;
 }
@@ -43,17 +230,6 @@ h2, h3, p, ul, li {
     background: #fff;
 }
 
-
-h2 {
-    padding-bottom: 60px;
-    text-align: center;
-}
-
-
-h3 {
-    margin-bottom: 30px;
-    font-size: 30px;
-}
 
 
 .metooNum {
@@ -85,3 +261,14 @@ h3 {
     height: 59px;
     margin-left: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
