--- a/app/webroot/css/top.css
+++ b/app/webroot/css/top.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 
 
 /*---------------------------------
@@ -7,107 +7,151 @@
 
 ----------------------------------*/
 ul,li,h2,h3,p {
-	margin: 0;
-	padding: 0;
-	border: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
+
+
+.none {
+    padding: 20px 0;
+    font-size: 24px;
+    text-align: center;
+    color: #f5f5f5;
+}
+
+
+
 
 
 /* Universal
 ----------------------------------------------------------------------*/
 #container {
-	color: #656565;
-	font-size: 20px;
+    font-size: 20px;
+    color: #656565;
 }
+
+
 #container h2 {
-	font-size: 24px;
+    font-size: 24px;
 }
+
+
 #container section {
-	padding: 80px 0 0;
+    padding: 80px 0 0;
 }
+
+
 h2 {
-	text-align: center;
-	margin-bottom: 60px;
+    margin-bottom: 60px;
+    text-align: center;
 }
+
+
 .hidden {
-	display: none;
+    display: none;
 }
+
+
 #needsArea {
-	width: 1008px;
-	overflow: hidden;
-	margin-left: -30px;
+    overflow: hidden;
+    width: 1008px;
+    margin-left: -30px;
 }
+
+
 #needsArea ul {
-	width: 1008px;
-	margin-left: -20px;
+    width: 1008px;
+    margin-left: -20px;
 }
+
+
 #needsArea li {
-	width: 474px;
-	margin-left: 30px;
-	float: left;
-	background: #fff;
-	padding: 14px 0;
-	margin-bottom: 20px;
+    float: left;
+    width: 474px;
+    margin-bottom: 20px;
+    margin-left: 30px;
+    padding: 14px 0;
+    background: #fff;
 }
+
+
 #needsArea a {
-	color: #656565;
-	text-decoration: none;
+    text-decoration: none;
+    color: #656565;
 }
+
+
 #needsArea .right a {
-	display: block;
-	widh: 140px;
-	height: 32px;
+    display: block;
+    width: 140px;
+    height: 32px;
 }
+
+
 #needsArea a img {
-	vertical-align: bottom;
+    vertical-align: bottom;
 }
+
+
 #needsArea a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
-#needsArea span {
-	padding-left:
-}
+
+
 .needsWrapper {
-	width: 474px;
+    width: 474px;
 }
+
+
 .needsWrapper > div {
-	float: left;
+    float: left;
 }
+
+
 .needsWrapper .left {
-	width: 233px;
-	padding: 4px 0 0 20px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+    overflow: hidden;
+    width: 233px;
+    padding: 4px 0 0 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
+
+
 .needsWrapper .middle {
-	width: 63px;
-	text-align: right;
-	padding: 5px 10px 0 0;
-	color: #48b2c2;
+    width: 63px;
+    padding: 5px 10px 0 0;
+    text-align: right;
+    color: #48b2c2;
 }
+
+
 .needsWrapper .right {
-	padding-top: 2px;
-	width: 140px;
+    width: 140px;
+    padding-top: 2px;
 }
+
+
 section .wrapper {
-	width: 978px;
-	overflow: hidden;
-	margin: 0 auto;
+    overflow: hidden;
+    width: 978px;
+    margin: 0 auto;
 }
+
+
 .seminarsArea {
-	width: 1008px;
-	margin: -30px 0 0 -30px;
-	padding-bottom: 80px;
+    width: 1008px;
+    margin: -30px 0 0 -30px;
+    padding-bottom: 80px;
 }
+
+
 .card {
-	float: left;
-	margin: 30px 0 0 30px;
+    float: left;
+    margin: 30px 0 0 30px;
 }
+
+
 .thumb {
-	overflow: hidden;
+    overflow: hidden;
 }
-
-
-
-
