--- a/app/webroot/css/seminar_card.css
+++ b/app/webroot/css/seminar_card.css
@@ -55,6 +55,10 @@ li {
 	color: #613323;
 	text-align: center;
 	font-size: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	width: 238px;
 }
 .card dt, .card dd {
 	font-size: 12px;
