--- a/partsset/css/control2.css
+++ b/partsset/css/control2.css
@@ -10,18 +10,25 @@
 
 /* Control
 ----------------------------------------------------------------------*/
-.text, .email, .date {
+.text, .email, .date, textarea {
 	border: solid 1px #3e99a7;
 	font-size: 18px;
 	padding: 10px;
-	width: 472px;
+	width: 452px;
 	height: 30px;
 	font-family: 'Lucida grande','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
 	border-radius: 5px;
 	color: #777;
 }
+.errMsg {
+	color: red;
+	padding: 5px 0 20px;
+	font-size: 14px;
+}
 .date {
-	background-image: url('../');
+	background-image: url('../img/calender.png') !important;
+	background-size: 28px 28px;
+	background-position: right 10px center;
 }
 .text:focus,
 .email:focus {
@@ -145,8 +152,9 @@
 	font-weight: normal;
 }
 .richeditor .esb-displayer {
-	background: url('../img/selectrichar.png') no-repeat right 10px center;
+	background: url('../img/selectrichar.png') no-repeat right 10px top 6px;
 	background-size: 5px 12px;
+	padding-top: 3px;
 }
 .richeditor li a {
 	display: block;
@@ -156,20 +164,18 @@
 	text-decoration: none;
 	font-size: 12px;
 	font-weight: bold;
-	padding: 3px 0 0;
+	padding: 5px 0 0;
 }
 #editArea {
 	background: #fff;
-	height: 295px;
-	padding: 10px;
-	color: #777;
-	font-size: 14px;
+	height: 315px;
 }
 #editArea:focus {
 	outline: none;
 }
 .richeditor li.labelLi {
 	border: solid 1px #3e99a7;
+	padding-top: 3px;
 }
 .richeditor li.buiBtn,
 .richeditor li.insertImg {
@@ -177,7 +183,7 @@
 }
 .richeditor li.buiBtn a {
 	font-weight: normal;
-	padding: 3px 0 0;
+	padding: 5px 0 0;
 }
 .richeditor li.buiBtn a:active,
 .richeditor li.insertImg a:active {
@@ -187,4 +193,7 @@
 .richeditor li.insertImg {
 	width: 88px;
 	text-align: center;
+}
+textarea {
+	height: 198px;
 }
